--- a/requirements.txt
+++ b/requirements.txt
@@ -174,9 +174,9 @@ toml==0.10.2
 tomli==2.0.2
 tomli_w==1.1.0
 tomlkit==0.13.2
-torch==2.5.1+cpu
-torchaudio==2.5.1+cpu
-torchvision==0.20.1+cpu
+torch
+torchaudio
+torchvision
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
