--- a/requirements.txt
+++ b/requirements.txt
@@ -1,194 +1,111 @@
 absl-py==2.1.0
-anyio==4.7.0
+alabaster==0.7.16
 appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astroid==2.6.6
-asttokens==3.0.0
 astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
 autograd==1.7.0
 autoray==0.7.0
 babel==2.16.0
-beautifulsoup4==4.12.3
-black==24.10.0
-bleach==6.2.0
-cachetools==5.0.0
+cachetools==5.5.0
 certifi==2024.8.30
-cffi==1.17.1
-cfgv==3.4.0
 charset-normalizer==3.4.0
-clarabel==0.9.0
-click==8.1.7
-comm==0.2.2
 contourpy==1.3.1
-coverage==7.6.9
-cvxopt==1.3.2
-cvxpy==1.6.0
 cycler==0.12.1
-debugpy==1.8.9
-decorator==5.1.1
-defusedxml==0.7.1
 diastatic-malt==2.15.2
-distlib==0.3.9
-exceptiongroup==1.2.2
-execnet==2.1.1
-executing==2.1.0
-fastjsonschema==2.21.1
+docutils==0.16
 filelock==3.16.1
-flaky==3.8.1
 flatbuffers==24.3.25
 fonttools==4.55.3
-fqdn==1.5.1
-fsspec==2024.2.0
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
+fsspec==2024.10.0
+gast==0.4.0
+google-auth==2.37.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+graphviz==0.20.3
 grpcio==1.68.1
-h11==0.14.0
 h5py==3.12.1
-httpcore==1.0.7
-httpx==0.28.1
-identify==2.6.3
 idna==3.10
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.30.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-isort==5.13.2
-jax==0.4.37
-jaxlib==0.4.36
-jedi==0.19.2
-Jinja2==3.1.4
-json5==0.10.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-keras==3.7.0
+imagesize==1.4.1
+importlib_resources==6.4.5
+jax==0.4.16
+jaxlib==0.4.16
+Jinja2==3.0.3
+keras==2.11.0
 kiwisolver==1.4.7
-lazy-object-proxy==1.10.0
+latexcodec==3.0.0
 libclang==18.1.1
+m2r2==0.3.2
 Markdown==3.7
-markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.9.3
-matplotlib-inline==0.1.7
-mccabe==0.6.1
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.4.1
+matplotlib==3.8.0
+mistune==0.8.4
+ml_dtypes==0.5.0
 mpmath==1.3.0
-mypy-extensions==1.0.0
-namex==0.0.8
-nbclient==0.10.1
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==2.8.8
-nodeenv==1.9.1
-notebook==7.3.1
-notebook_shim==0.2.4
+networkx==2.6
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
 opt_einsum==3.4.0
-optree==0.13.1
-osqp==0.6.7.post3
-overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pathspec==0.12.1
-pexpect==4.9.0
+pennylane-sphinx-theme==0.6.0
 pillow==11.0.0
-platformdirs==4.3.6
-pluggy==1.5.0
-pre_commit==4.0.1
-prometheus_client==0.21.1
-prompt_toolkit==3.0.48
-protobuf==5.29.1
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py==1.11.0
-py-cpuinfo==9.0.0
-pycparser==2.22
-pydot==3.0.3
+protobuf==3.19.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pybtex==0.24.0
+pybtex-docutils==1.0.3
 Pygments==2.18.0
-pylint==2.7.4
+pygments-github-lexers==0.0.5
 pyparsing==3.2.0
-pytest==8.3.4
-pytest-benchmark==5.1.0
-pytest-cov==6.0.0
-pytest-forked==1.6.0
-pytest-mock==3.14.0
-pytest-rng==1.0.0
-pytest-split==0.10.0
-pytest-xdist==3.6.1
 python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==6.0.2
-pyzmq==26.2.0
-qdldl==0.1.7.post4
-referencing==0.35.1
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.22.3
+requests==2.28.2
+requests-oauthlib==2.0.0
+rsa==4.9
 rustworkx==0.15.1
 scipy==1.14.1
-scs==3.2.7
-Send2Trash==1.8.3
 six==1.17.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
+snowballstemmer==2.2.0
+Sphinx==4.2.0
+sphinx-automodapi==0.13
+sphinx-copybutton==0.5.2
+sphinx-gallery==0.16.0
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-bibtex==2.4.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sphinxext-opengraph==0.6.3
 sympy==1.13.1
-tach==0.13.1
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.11.1
+tensorflow-estimator==2.11.0
 tensorflow-io-gcs-filesystem==0.37.1
+tensornetwork==0.3.0
 termcolor==2.5.0
-terminado==0.18.1
-tinycss2==1.4.0
-toml==0.10.2
 tomli==2.0.2
-tomli_w==1.1.0
 tomlkit==0.13.2
-torch
-torchaudio
-torchvision
-tornado==6.4.2
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20241206
+torch==2.3.0
+triton==2.3.0
 typing_extensions==4.12.2
 tzdata==2024.2
-uri-template==1.3.0
-urllib3==2.2.3
-virtualenv==20.28.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
+urllib3==1.26.20
 Werkzeug==3.1.3
-widgetsnbextension==4.0.13
-wrapt==1.12.1
+wrapt==1.17.0
+xanadu-sphinx-theme==0.5.0
